# infrastructure

./: .gitattributes  .gitignore  Makefile  README.md  ansible.cfg  deploy  deploy.retry  deploy.yml  first-deploy.yml  pyproject.toml  requirements.txt
ansible/: README.md  ansible.cfg  requirements.yaml
ansible/inventory/: hosts
ansible/inventory/group_vars/: all  mac  rpi
ansible/inventory/host_vars/: chambonas  gallifrey  mac-pro  martial  pi  pistou
ansible/macros/: nginx_static.j2  ssh_user_authorized_keys.j2
ansible/playbooks/: chambonas.yml  gallifrey-bootstrap.yml  gallifrey.yml  mac-pro.yml  martial-bootstrap.yml  martial.yml  pi-bootstrap.yml  pi.yml  pistou.yml
group_vars/: all  vault
misc/: ansible-role-searchpath.diff  ssh_keys
playbooks/: .ansible-lint  ansible.cfg  gallifrey.yml  linkpi-bootstrap.yml  linkpi.yml  mac-perso.yml  pi-bootstrap.yml  pi.yml  pistou-bootstrap.yml  pistou.yml  requirements.yaml  sophro-bootstrap.yml  sophro.yml  syno.yml
playbooks/common/vars/: main.yml
playbooks/gallifrey/: .gitignore  deploy.yml  first-deploy.yml
playbooks/group_vars/: all  mac  pi
playbooks/host_vars/: gallifrey  linkpi  mac-perso  pi  pistou  sophro  syno
playbooks/inventory/: hosts
playbooks/macros/: nginx_proxy_pass.j2  nginx_static.j2
roles/certbot/: .travis.yml  README.md
terraform/: README.md  config.hcl  env.sh
terraform/aws/: main.tf
terraform/datadog/: dashboards.tf  main.tf  monitors.tf  synthetics.tf
terraform/global_vars/: main.tf
terraform/ovh/: main.tf  variables.tf
terraform/scaleway/: main.tf
(+427 files in other folders)
