[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Personal infrastructure management project"
authors = ["Balthazar Rouberol <br@imap.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^6.2.0"
datadog = "^0.44.0"
ovhcli = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
